{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 2161,
  "lineage": "0ab3ba29-f543-907b-504e-d10a916665ad",
  "resources": [
    {
      "module": "module.ecs_fargate_alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:611922433325:listener/app/VTENH-fargate/a46e6943e8cf6238/2d43bef12110fb96",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:611922433325:listener/app/VTENH-fargate/a46e6943e8cf6238/2d43bef12110fb96",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:611922433325:loadbalancer/app/VTENH-fargate/a46e6943e8cf6238",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.ecs_fargate_alb.aws_alb_target_group.main",
            "module.ecs_fargate_alb.aws_lb.main",
            "module.sg.aws_security_group.ecs",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate_alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:611922433325:listener/app/VTENH-fargate/a46e6943e8cf6238/a30fafa84a20d7d1",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:611922433325:certificate/c66424af-3ed7-4211-b714-c718d63590df",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:611922433325:targetgroup/VTENH-fargate/a7147d581f76575a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:611922433325:listener/app/VTENH-fargate/a46e6943e8cf6238/a30fafa84a20d7d1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:611922433325:loadbalancer/app/VTENH-fargate/a46e6943e8cf6238",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "data.aws_acm_certificate.vtenh",
            "module.ecs_fargate_alb.aws_alb_target_group.main",
            "module.ecs_fargate_alb.aws_lb.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate_alb",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "redirect_non_www",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "www.vtenh.com",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:611922433325:listener-rule/app/VTENH-fargate/a46e6943e8cf6238/a30fafa84a20d7d1/82b44b5bd4fdbfee",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "vtenh.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:611922433325:listener-rule/app/VTENH-fargate/a46e6943e8cf6238/a30fafa84a20d7d1/82b44b5bd4fdbfee",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:611922433325:listener/app/VTENH-fargate/a46e6943e8cf6238/a30fafa84a20d7d1",
            "priority": 10
          },
          "dependencies": [
            "module.ecs_fargate_alb.aws_alb_listener.https",
            "module.ecs_fargate_alb.aws_alb_target_group.main",
            "module.ecs_fargate_alb.aws_lb.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate_alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:611922433325:targetgroup/VTENH-fargate/a7147d581f76575a",
            "arn_suffix": "targetgroup/VTENH-fargate/a7147d581f76575a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/health_check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:611922433325:targetgroup/VTENH-fargate/a7147d581f76575a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "VTENH-fargate",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0648f6ee3beb5d737"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0aa094176c7e0f5bf",
            "domain": "vpc",
            "id": "eipalloc-0d51b5206c6f7d1f8",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0729c1f323d18cd04",
            "private_dns": "ip-192-168-1-254.ap-southeast-1.compute.internal",
            "private_ip": "192.168.1.254",
            "public_dns": "ec2-54-179-208-62.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.179.208.62",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "PublicIp for VTENH NAT"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:611922433325:internet-gateway/igw-05f7a33fcb11b5143",
            "id": "igw-05f7a33fcb11b5143",
            "owner_id": "611922433325",
            "tags": {
              "Name": "Internet Gateway for public Subnet"
            },
            "vpc_id": "vpc-0648f6ee3beb5d737"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_fargate_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:611922433325:loadbalancer/app/VTENH-fargate/a46e6943e8cf6238",
            "arn_suffix": "app/VTENH-fargate/a46e6943e8cf6238",
            "dns_name": "VTENH-fargate-1423880122.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:611922433325:loadbalancer/app/VTENH-fargate/a46e6943e8cf6238",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "VTENH-fargate",
            "security_groups": [
              "sg-0b8f764c7f3bf5570"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0537278cba0fe9a9b"
              },
              {
                "subnet_id": "subnet-07f858c291d262ae0"
              },
              {
                "subnet_id": "subnet-0b390072549da094e"
              }
            ],
            "subnets": [
              "subnet-0537278cba0fe9a9b",
              "subnet-07f858c291d262ae0",
              "subnet-0b390072549da094e"
            ],
            "vpc_id": "vpc-0648f6ee3beb5d737",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.sg.aws_security_group.ecs",
            "module.vpc.aws_subnet.publics",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d51b5206c6f7d1f8",
            "id": "nat-071ff3ee0effdaac7",
            "network_interface_id": "eni-0729c1f323d18cd04",
            "private_ip": "192.168.1.254",
            "public_ip": "54.179.208.62",
            "subnet_id": "subnet-0537278cba0fe9a9b",
            "tags": {
              "Name": "VTENH NAT Gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.main",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-083374e783e837b7b",
            "owner_id": "611922433325",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f7a33fcb11b5143",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VTENH Route table IG"
            },
            "vpc_id": "vpc-0648f6ee3beb5d737"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0aad205e863942498",
            "owner_id": "611922433325",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-071ff3ee0effdaac7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VTENH NAT Route table"
            },
            "vpc_id": "vpc-0648f6ee3beb5d737"
          },
          "dependencies": [
            "module.vpc.aws_eip.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_main_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d9f984de1a9128f",
            "route_table_id": "rtb-0aad205e863942498",
            "subnet_id": "subnet-0aea1f2e169b9f30c"
          },
          "dependencies": [
            "module.vpc.aws_eip.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.nat",
            "module.vpc.aws_subnet.privates",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9e0646d261b3226",
            "route_table_id": "rtb-0aad205e863942498",
            "subnet_id": "subnet-022f6d81a2f575246"
          },
          "dependencies": [
            "module.vpc.aws_eip.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.nat",
            "module.vpc.aws_subnet.privates",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5235eec4bdea009",
            "route_table_id": "rtb-0aad205e863942498",
            "subnet_id": "subnet-00d27e777eecc58cf"
          },
          "dependencies": [
            "module.vpc.aws_eip.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.nat",
            "module.vpc.aws_subnet.privates",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fbbd5eb73acf6b8",
            "route_table_id": "rtb-083374e783e837b7b",
            "subnet_id": "subnet-0537278cba0fe9a9b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.ig",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052b0d1cd46571c0d",
            "route_table_id": "rtb-083374e783e837b7b",
            "subnet_id": "subnet-0b390072549da094e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.ig",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb690174dfe7c4f8",
            "route_table_id": "rtb-083374e783e837b7b",
            "subnet_id": "subnet-07f858c291d262ae0"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.ig",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:611922433325:security-group/sg-05766d1a5ac538baf",
            "description": "Allow access to SSH from local machine bashion",
            "egress": [],
            "id": "sg-05766d1a5ac538baf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from my machine",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion server to access SSH20201224125554525300000001",
            "name_prefix": "Bastion server to access SSH",
            "owner_id": "611922433325",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bashion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0648f6ee3beb5d737"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:611922433325:security-group/sg-0b8f764c7f3bf5570",
            "description": "Allow access from ABL to ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow access from SSH to ECS (in case of EC2)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8f764c7f3bf5570",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow access from ALB to ECS",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0a378cac22e6e0e56"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Ecs Security group20201224125557439100000008",
            "name_prefix": "Ecs Security group",
            "owner_id": "611922433325",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ECS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0648f6ee3beb5d737"
          },
          "dependencies": [
            "module.sg.aws_security_group.load_balancer",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:611922433325:security-group/sg-0a378cac22e6e0e56",
            "description": "Control access from internet to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a378cac22e6e0e56",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Load banlancer application20201224125554526700000003",
            "name_prefix": "Load banlancer application",
            "owner_id": "611922433325",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Load Balancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0648f6ee3beb5d737"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "memcached",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:611922433325:security-group/sg-0c511bc774dd93ad9",
            "description": "Allow to connect to Memchached from bashion and  webserver to connect to",
            "egress": [],
            "id": "sg-0c511bc774dd93ad9",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "Access from bashion host and webserver",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-011936ec6b19c67fd",
                  "sg-05766d1a5ac538baf"
                ],
                "self": false,
                "to_port": 11211
              }
            ],
            "name": "Security group for Memchached20201224125557010100000005",
            "name_prefix": "Security group for Memchached",
            "owner_id": "611922433325",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Memcached"
            },
            "timeouts": null,
            "vpc_id": "vpc-0648f6ee3beb5d737"
          },
          "dependencies": [
            "module.sg.aws_security_group.bastion",
            "module.sg.aws_security_group.webserver",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:611922433325:security-group/sg-0865cef9fdb508368",
            "description": "Allow to connect to RDS from bashion and  webserver to connect to",
            "egress": [],
            "id": "sg-0865cef9fdb508368",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "Access from bashion host and webserver",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-011936ec6b19c67fd",
                  "sg-05766d1a5ac538baf"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDS MySql20201224125557010300000007",
            "name_prefix": "RDS MySql",
            "owner_id": "611922433325",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS MySQL"
            },
            "timeouts": null,
            "vpc_id": "vpc-0648f6ee3beb5d737"
          },
          "dependencies": [
            "module.sg.aws_security_group.bastion",
            "module.sg.aws_security_group.webserver",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgresql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:611922433325:security-group/sg-089d9e2f601639325",
            "description": "Allow to connect to RDS from bashion and  webserver to connect to",
            "egress": [],
            "id": "sg-089d9e2f601639325",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "Access from bashion host and webserver",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-011936ec6b19c67fd",
                  "sg-05766d1a5ac538baf"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "RDS Postgres20201224125557010100000004",
            "name_prefix": "RDS Postgres",
            "owner_id": "611922433325",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS Postgresql"
            },
            "timeouts": null,
            "vpc_id": "vpc-0648f6ee3beb5d737"
          },
          "dependencies": [
            "module.sg.aws_security_group.bastion",
            "module.sg.aws_security_group.webserver",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgresql_replica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:611922433325:security-group/sg-081cf7d783687f7f2",
            "description": "Allow to connect to RDS from bashion, webserver and quicksight to connect to",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-019feeb2c9fe6b342"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081cf7d783687f7f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Access from bashion host, webserver and quicksight",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-019feeb2c9fe6b342"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "RDS Replica20210503093049989500000001",
            "name_prefix": "RDS Replica",
            "owner_id": "611922433325",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS Replica"
            },
            "timeouts": null,
            "vpc_id": "vpc-0648f6ee3beb5d737"
          },
          "dependencies": [
            "module.sg.aws_security_group.quicksight",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "quicksight",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:611922433325:security-group/sg-019feeb2c9fe6b342",
            "description": "Allow postgresql to be accessed by Quicksight",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-019feeb2c9fe6b342",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Quicksight Singapore: ap-southeast-1",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "AWS Quicksight20210503053754750500000001",
            "name_prefix": "AWS Quicksight",
            "owner_id": "611922433325",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS Quicksight"
            },
            "timeouts": null,
            "vpc_id": "vpc-0648f6ee3beb5d737"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:611922433325:security-group/sg-0116e7ae4cad864c7",
            "description": "Allow to connect to Redis from bashion and  webserver to connect to",
            "egress": [],
            "id": "sg-0116e7ae4cad864c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "Access from bashion host and webserver",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-011936ec6b19c67fd",
                  "sg-05766d1a5ac538baf"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "Security group for Redis20201224125557010100000006",
            "name_prefix": "Security group for Redis",
            "owner_id": "611922433325",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Redis"
            },
            "timeouts": null,
            "vpc_id": "vpc-0648f6ee3beb5d737"
          },
          "dependencies": [
            "module.sg.aws_security_group.bastion",
            "module.sg.aws_security_group.webserver",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:611922433325:security-group/sg-011936ec6b19c67fd",
            "description": "Webserver for internet access",
            "egress": [],
            "id": "sg-011936ec6b19c67fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Access from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Access from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web server20201224125554525600000002",
            "name_prefix": "Web server",
            "owner_id": "611922433325",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Webserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-0648f6ee3beb5d737"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:611922433325:subnet/subnet-0aea1f2e169b9f30c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.101.0/24",
            "id": "subnet-0aea1f2e169b9f30c",
            "map_public_ip_on_launch": false,
            "owner_id": "611922433325",
            "tags": {
              "Name": "VTENH Private Subnet 1"
            },
            "vpc_id": "vpc-0648f6ee3beb5d737"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:611922433325:subnet/subnet-022f6d81a2f575246",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.102.0/24",
            "id": "subnet-022f6d81a2f575246",
            "map_public_ip_on_launch": false,
            "owner_id": "611922433325",
            "tags": {
              "Name": "VTENH Private Subnet 2"
            },
            "vpc_id": "vpc-0648f6ee3beb5d737"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:611922433325:subnet/subnet-00d27e777eecc58cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "192.168.103.0/24",
            "id": "subnet-00d27e777eecc58cf",
            "map_public_ip_on_launch": false,
            "owner_id": "611922433325",
            "tags": {
              "Name": "VTENH Private Subnet 3"
            },
            "vpc_id": "vpc-0648f6ee3beb5d737"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:611922433325:subnet/subnet-0537278cba0fe9a9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0537278cba0fe9a9b",
            "map_public_ip_on_launch": false,
            "owner_id": "611922433325",
            "tags": {
              "Name": "VTENH Public Subnet 1"
            },
            "vpc_id": "vpc-0648f6ee3beb5d737"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:611922433325:subnet/subnet-0b390072549da094e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0b390072549da094e",
            "map_public_ip_on_launch": false,
            "owner_id": "611922433325",
            "tags": {
              "Name": "VTENH Public Subnet 2"
            },
            "vpc_id": "vpc-0648f6ee3beb5d737"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:611922433325:subnet/subnet-07f858c291d262ae0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-07f858c291d262ae0",
            "map_public_ip_on_launch": false,
            "owner_id": "611922433325",
            "tags": {
              "Name": "VTENH Public Subnet 3"
            },
            "vpc_id": "vpc-0648f6ee3beb5d737"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:611922433325:vpc/vpc-0648f6ee3beb5d737",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-09e0c343a10e45097",
            "default_route_table_id": "rtb-0616d7f7f18996365",
            "default_security_group_id": "sg-06186e909ed1a0cc0",
            "dhcp_options_id": "dopt-1ef31878",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0648f6ee3beb5d737",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0616d7f7f18996365",
            "owner_id": "611922433325",
            "tags": {
              "AutoManaged": "true",
              "Generator": "VTENH",
              "Location": "ap-southeast-1",
              "Name": "VTENH"
            }
          }
        }
      ]
    }
  ]
}